# Mythos

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  dependencies.lua  premake5.lua
Mythos/: premake5.lua  todo.txt
Mythos/mythos/src/: attributes.hpp
Mythos/mythos/src/core/: app.hpp  core.hpp  entry_point.hpp
Mythos/src/mythos/: algorithm.hpp  constants.hpp  defines.hpp  file.hpp  input.cpp  input.hpp  io.hpp  math.hpp  random.hpp  timer.hpp  uuid.cpp  uuid.hpp
Mythos/src/mythos/core/: app.cpp  app.hpp  assert.hpp  core.hpp  entry.hpp  except.cpp  except.hpp  input.cpp  input.hpp  key_codes.hpp  keyboard.hpp  layer.hpp  layer_stack.cpp  layer_stack.hpp  log.cpp  log.hpp  mouse_codes.hpp  timestep.hpp  window.cpp  window.hpp
Mythos/src/mythos/event/: app_event.hpp  event.cpp  event.hpp  key_event.hpp  mouse_event.hpp
Mythos/src/mythos/ex/: c_allocator.hpp  malloc_allocator.hpp  tag_allocator.hpp
Mythos/src/mythos/math/: common.hpp  common_math.cpp  geometric.hpp  mat2x2.hpp  mat2x3.hpp  mat2x4.hpp  mat3x2.hpp  mat3x3.hpp  mat3x4.hpp  mat4x2.hpp  mat4x3.hpp  mat4x4.hpp  matrix.hpp  matrix_operators.hpp  projection.hpp  quaternion.hpp  structure_def.hpp  transform.hpp  trigonometry.hpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vec_compare.hpp
Mythos/src/mythos/network/: endian.cpp  endian.hpp
Mythos/src/mythos/platform/: detection.hpp
Mythos/src/mythos/platform/vulkan/: vulkan_backend.cpp  vulkan_backend.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_command_buffer.cpp  vulkan_command_buffer.hpp  vulkan_common.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_fence.cpp  vulkan_fence.hpp  vulkan_framebuffer.cpp  vulkan_framebuffer.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_platform.cpp  vulkan_platform.hpp  vulkan_render_pass.cpp  vulkan_render_pass.hpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_utils.cpp  vulkan_utils.hpp  vulkan_vertex_array.cpp  vulkan_vertex_array.hpp
Mythos/src/mythos/render/: backend.cpp  backend.hpp  common.hpp  global_uniform_object.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
Mythos/src/mythos/scene/: scene.cpp  scene.hpp
Testbed/: premake5.lua
Testbed/resources/shaders/: shader.glsl
Testbed/src/: entry.cpp  main.cpp
Testbed/src/testbed/: game_layer.cpp  game_layer.hpp  test_manager.cpp  test_manager.hpp  testbed_layer.cpp  testbed_layer.hpp
Testbed/src/testbed/ex/: new_funcs.hpp
Testbed/src/testbed/tests/: math.hpp
Testbed/src/testbed/utils/: keys_buttons_string.hpp
Testbed/src/utils/: keys_buttons_string.hpp
cmake/: definitions.cmake  find_vulkan.cmake  utility.cmake
cmake/presets/: clang.json  common.json  generator.json  msvc.json
cmake/toolchain/: cl.cmake  clang-cl.cmake  windows-x86-clang-cl.cmake  windows-x86-msvc.cmake  windows-x86_64-clang-cl.cmake  windows-x86_64-msvc.cmake
mythos/editor/: CMakeLists.txt
mythos/editor/src/editor/: application.cpp  application.hpp  log.cpp  log.hpp
mythos/editor/src/editor/core/: application.cpp  application.hpp  editor_layer.cpp  editor_layer.hpp
mythos/engine/: CMakeLists.txt  TODO.txt
mythos/engine/src/: main.cpp
mythos/engine/src/mythos/: assert.hpp  entry.hpp  input.cpp  input.hpp  log.cpp  log.hpp  version.hpp
mythos/engine/src/mythos/core/: application.cpp  application.hpp  hid_button_code.hpp  keyboard.hpp  keycodes.hpp  layer.hpp  layer_stack.cpp  layer_stack.hpp  log.cpp  log.hpp  mousecodes.hpp  timestep.hpp
mythos/engine/src/mythos/event/: device_event.hpp  event.cpp  event.hpp  gamepad_event.hpp  hid_event.hpp  key_event.hpp  mouse_event.hpp  window_event.hpp
mythos/engine/src/mythos/input/: button.hpp  device.hpp  hid_button_code.hpp  keyboard.hpp  mousecodes.hpp
mythos/engine/src/mythos/platform/: hid.cpp  hid.hpp  window.cpp  window.hpp
mythos/engine/src/mythos/platform/peripherals/: dualsense.cpp  dualsense.hpp  dualshock4.cpp  dualshock4.hpp
mythos/engine/src/mythos/platform/windows/: win_device.cpp  win_input.cpp  win_input.hpp  win_utilities.cpp  win_utilities.hpp  win_utility.cpp  win_utility.hpp  win_window.cpp  win_window.hpp
mythos/engine/src/mythos/render/: render_buffer.cpp  render_buffer.hpp  renderer.cpp  renderer.hpp  renderer_backend.cpp  renderer_backend.hpp  shader.cpp  shader.hpp
mythos/engine/src/mythos/render/vulkan/: backend.cpp  backend.hpp  vulkan_backend.cpp  vulkan_backend.hpp  vulkan_command_buffer.cpp  vulkan_command_buffer.hpp  vulkan_command_objects.cpp  vulkan_command_objects.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_descriptor.cpp  vulkan_descriptor.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_platform.cpp  vulkan_platform.hpp  vulkan_render_buffer.cpp  vulkan_render_buffer.hpp  vulkan_render_pass.cpp  vulkan_render_pass.hpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_utility.cpp  vulkan_utility.hpp
mythos/engine/src/mythos/render/vulkan2/: vulkan_backend.cpp  vulkan_backend.hpp  vulkan_command_objects.cpp  vulkan_command_objects.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_platform.cpp  vulkan_platform.hpp  vulkan_render_pass.cpp  vulkan_render_pass.hpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp
mythos/testbed/: CMakeLists.txt
mythos/testbed/src/testbed/: camera.cpp  camera.hpp  log.cpp  log.hpp
mythos/testbed/src/testbed/core/: application.cpp  application.hpp  testbed_layer.cpp  testbed_layer.hpp
mythos/testbed/src/testbed/layers/: event_layer.cpp  event_layer.hpp
scripts/: Setup.py  SetupVulkan.py  UpdateSubmodules.py  setup.bat  update_submodules.bat  win-setup.bat  windows_generate_projects.bat
scripts/python/: setup.py  setup_cmake.py  setup_ninja.py  setup_python.py  setup_vulkan.py  utility.py
scripts/setup/: setup.py  setup_premake.py  setup_vulkan.py  utils.py
(+62 files in other folders)
